animated memucho banner, cookie for memucho banner, fixed sidebar divider on small pages and long windows.

--- a/src/TrueOrFalse.Frontend.Web/Style/site.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/site.less
@@ -48,9 +48,12 @@
 ----------------------------------------------------------*/
 
 html {
-   // overflow: scroll; //always show scrollbar
+    // overflow: scroll; //always show scrollbar
     height: 100%;
     background-color: @background-grey;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
     //.make-footer-stick-to-bottom;//Remove if causing any problems
 }
 
@@ -59,6 +62,9 @@ body {
     min-width: 280px;
     position: relative;
     background-color: @color-background-global;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 h1, h2, h3, h4, h5 {
@@ -861,6 +867,8 @@ ul.AutocompleteHeader {
     padding-right: 15px; //for Bootstrap .row
     padding-bottom: 20px;
     position: relative;
+    z-index: 50;
+    flex: 1;
 
     #footerOn {
         display: inline-block;
@@ -2456,13 +2464,29 @@ textarea, input {
 }
 
 #MemuchoInfoBanner {
-    min-height: 140px;
+    height: 0px;
+    min-height: 0px;
     width: 100%;
     background: #e5effa;
-    position: sticky;
     top: 0;
     z-index: 50;
-    margin: 0 0 -40px 0;
+    margin: 0;
+    transform: translateY(-140px);
+    transition: transform 0.5s ease-out, min-height 0.5s ease-out, opacity 0.5s ease-out, visibility 0.5s ease-out;
+    opacity: 0;
+    position: relative;
+    pointer-events: none;
+    visibility: hidden;
+
+    &.show-banner {
+        opacity: 1;
+        min-height: 140px;
+        margin: 0 0 -40px 0;
+        height: unset;
+        transform: translateY(0px);
+        pointer-events: unset;
+        visibility: unset;
+    }
 
     .container {
         height: 100%;
@@ -2497,6 +2521,7 @@ textarea, input {
                     line-height: 20px;
                     letter-spacing: 1.25px;
                     width: 100%;
+
                     .fa-heart {
                         color: @memo-wuwi-red;
                     }
